<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Legenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/santral_bold"
        android:text="@string/Legendas"
        android:textColor="@color/preto"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/StatusDoPed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Legenda"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/santral_bold"
        android:text="@string/StutosDoPed"
        android:textColor="@color/preto"
        android:textSize="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EmProc"
        android:fontFamily="@font/santral_bold"
        android:textSize="10sp"
        android:layout_toRightOf="@id/Processamento"
        android:layout_below="@id/StatusDoPed"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/preto"
        />

    <FrameLayout
        android:id="@+id/Processamento"
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_below="@id/StatusDoPed"
        >

        <TextView

            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/cicle"
            android:backgroundTint="@color/cinzaClaro"
            android:gravity="center"
            android:textSize="10sp" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:elevation="5dp"
            android:src="@drawable/ic_maxima_em_processamento" />

    </FrameLayout>


    <TextView
        android:id="@+id/txt_Pendente"
        android:layout_below="@id/Processamento"
        android:layout_marginTop="5dp"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/cicle"
        android:backgroundTint="@color/cinza"
        android:gravity="center"
        android:text="P"
        android:textColor="@color/branco"
        android:textSize="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pendente"
        android:fontFamily="@font/santral_bold"
        android:textSize="10sp"
        android:layout_toRightOf="@id/Processamento"
        android:layout_below="@id/Processamento"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/preto"
        />


    <TextView
        android:id="@+id/txt_Bloqueado"
        android:layout_below="@id/txt_Pendente"
        android:layout_marginTop="5dp"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/cicle"
        android:backgroundTint="@color/Amarelo"
        android:gravity="center"
        android:text="B"
        android:textColor="@color/branco"
        android:textSize="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bloqueado"
        android:fontFamily="@font/santral_bold"
        android:textSize="10sp"
        android:layout_toRightOf="@id/Processamento"
        android:layout_below="@id/txt_Pendente"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/preto"
        />



    <TextView
        android:id="@+id/txt_Liberado"
        android:layout_below="@id/txt_Bloqueado"
        android:layout_marginTop="5dp"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/cicle"
        android:backgroundTint="@color/azulMaisClaro"
        android:gravity="center"
        android:text="L"
        android:textColor="@color/branco"
        android:textSize="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liberado"
        android:fontFamily="@font/santral_bold"
        android:textSize="10sp"
        android:layout_toRightOf="@id/Processamento"
        android:layout_below="@id/txt_Bloqueado"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/preto"
        />

    <TextView
        android:id="@+id/txt_Montado"
        android:layout_below="@id/txt_Liberado"
        android:layout_marginTop="5dp"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/cicle"
        android:backgroundTint="@color/verdeClaro"
        android:gravity="center"
        android:text="M"
        android:textColor="@color/branco"
        android:textSize="10sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/montado"
        android:fontFamily="@font/santral_bold"
        android:textSize="10sp"
        android:layout_toRightOf="@id/Processamento"
        android:layout_below="@id/txt_Liberado"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/preto"
        />

    <TextView
        android:id="@+id/txt_Faturado"
        android:layout_below="@id/txt_Montado"
        android:layout_marginTop="5dp"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/cicle"
        android:backgroundTint="@color/verdeEscuro"
        android:gravity="center"
        android:text="F"
        android:textColor="@color/branco"
        android:textSize="10sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faturado"
        android:fontFamily="@font/santral_bold"
        android:textSize="10sp"
        android:layout_toRightOf="@id/Processamento"
        android:layout_below="@id/txt_Montado"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/preto"
        />

    <TextView
        android:id="@+id/txt_Cancelado"
        android:layout_below="@id/txt_Faturado"
        android:layout_marginTop="5dp"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/cicle"
        android:backgroundTint="@color/vermelhoEscuro"
        android:gravity="center"
        android:text="C"
        android:textColor="@color/branco"
        android:textSize="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelado"
        android:fontFamily="@font/santral_bold"
        android:textSize="10sp"
        android:layout_toRightOf="@id/Processamento"
        android:layout_below="@id/txt_Faturado"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/preto"
        />

    <TextView
        android:layout_below="@id/txt_Cancelado"
        android:layout_marginTop="5dp"
        android:id="@+id/txt_Ocamento"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/cicle"
        android:backgroundTint="@color/cinzaEscuro_2"
        android:gravity="center"
        android:text="O"
        android:textColor="@color/branco"
        android:textSize="10sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ocamento"
        android:fontFamily="@font/santral_bold"
        android:textSize="10sp"
        android:layout_toRightOf="@id/Processamento"
        android:layout_below="@id/txt_Cancelado"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/preto"
        />


</RelativeLayout>