<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/prata"
    tools:context=".Alvaras">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/toolbar1"
        android:gravity="center"
        >

        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/maxima_empty_state"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nada"
            android:fontFamily="@font/santral_bold"
            android:textSize="30sp"
            android:layout_below="@id/img"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nao"
            android:fontFamily="@font/santral_bold"
            android:textSize="20sp"
            android:layout_below="@id/txt"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/veri"
            android:fontFamily="@font/santral_bold"
            android:textSize="20sp"
            android:layout_below="@id/txt2"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:elevation="3dp">

                            <ImageView
                                android:id="@+id/imgDados"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_centerHorizontal="true"
                                android:layout_marginStart="10dp"
                                android:elevation="1dp"
                                app:srcCompat="@drawable/ic_maxima_pessoa_inativo" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/imgDados"
                                android:layout_centerHorizontal="true"
                                android:fontFamily="@font/santral_bold"
                                android:gravity="center"
                                android:text="@string/Dados"
                                android:textColor="@color/cinzaEscuro_4" />
                        </RelativeLayout>

                        <Button
                            android:id="@+id/btnDados"
                            style="?attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@color/azulMaisClaro" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:elevation="3dp">

                            <ImageView
                                android:id="@+id/imgHisPedido"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_centerHorizontal="true"
                                android:layout_marginStart="10dp"
                                android:elevation="1dp"
                                app:srcCompat="@drawable/ic_maxima_historico_pedidos_inativo" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/imgHisPedido"
                                android:fontFamily="@font/santral_bold"
                                android:gravity="center"
                                android:text="@string/HistPedidos"
                                android:textColor="@color/cinzaEscuro_4" />
                        </RelativeLayout>

                        <Button
                            android:id="@+id/btnHisPedidos"
                            style="?attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@color/azulMaisClaro" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:elevation="3dp">

                            <ImageView
                                android:id="@+id/imgAlvaras"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_centerHorizontal="true"
                                android:layout_marginStart="10dp"
                                android:elevation="1dp"
                                app:srcCompat="@drawable/ic_maxima_alvara_ativo" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/imgAlvaras"
                                android:layout_centerHorizontal="true"
                                android:fontFamily="@font/santral_bold"
                                android:text="@string/Alvaras"
                                android:textColor="@color/branco" />
                        </RelativeLayout>

                        <Button
                            android:id="@+id/btnAlvaras"
                            style="?attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@color/azulMaisClaro" />
                    </FrameLayout>
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</RelativeLayout>